--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,12 +29,21 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Compile
+      run: |
+        python setup.py build_ext --inplace
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Test with unittest
       run: |
-        pytest
+        python -m unittest discover test
+    - name: Run main
+      run: |
+        python timing.py
+    - name: Profile
+      run: |
+        python profilex.py
